# RayTracer

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: geometry.h  glWinImage.h  main.cpp  raytrace.h  shapes.h  utils.h  waveletNoise.h
